          (closes #43)
        - added _pwm_in_use(), sets a flag that we need to reset PWM frequencies
          on the board back to default at cleanup()
        - modified t/15-pwm.t. We now use an ADS1115 ADC to test the PWM
          functionality (closes #46)
        - added t/41 and t/42; we now test falling, rising and both for
          interrupts

2.3619  2017-07-04
        - hid all of the setup() tests. Somewhere in the last commits we broke
          it, but that's actually ok
        - all external devices/sensors that require GPIO pins have all of those
          pins registered prior to returning the object
        - registered pins are still stored in $ENV{RPI_PINS}, but we store them
          within a JSON hash now, along with each pin's state and alt mode
        - in cleanup, we now use WiringPi::API directly to reset all registered
          pins back to the way they were as the program first started up
        - significantly beefed up the testing regime. On each test file, we
          check that all pins are back to their default (pre-test) state and
          mode. Added t/RPiTest.pm to handle the work
        - addded new DEVELOPMENT section to FAQ; added blurb about registering
          pins if adding new subs
        - all pins are now reset to default with cleanup(), as well as on any
          crash (closes #34)
        - fix typo in GPS section in SYNOPSIS (closes #37)
        - clarify in POD that it's not just WiringPi::API we use (closes #38)
        - clean up POD (closes #36)

2.3618  2017-07-01
        - incorporated RPi::Serial
        - bumped remaining prereqs specific to RPi:: that needed it to encompass
          all known bug fixes and feature adds

2.3617  2017-06-28
        - fix wire colour for the DAC CS pin in the diagram (light blue from
          orange)
        - added the tester flag to bbdispatch in the FAQs automated test section
        - bump ver of RPi::LCD to 2.3603 due to a bug fix