@@ -40,6 +40,7 @@ t/70-alt_modes.t
 t/75-serial.t
 t/80-mode_state_all_pins.t
 t/85-pwm_hw_mods.t
+t/90-servo.t
 t/manifest.t
 t/pod-coverage.t
 t/RPiTest.pm
