@@ -21,6 +21,7 @@ Revision history for Perl extension RPi::WiringPi.
           functionality (closes #46)
         - added t/41 and t/42; we now test falling, rising and both for
           interrupts
+        - added t/90-servo.t to test the actual PWM cleanup() routine
 
 2.3619  2017-07-04
         - hid all of the setup() tests. Somewhere in the last commits we broke
